--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <input type="text" id="message-input">
         <button type="submit" id="send-button">Send</button>
     </form>
+
+    <!-- <div id="root"></div> -->
 </body>
 
 </html>
